style.css
/* Default styles for mobile devices */
* {
  transition: all 0.1s smooth;
}
/* The switch - the box around the slider - placed at top to allow modification later */
.theme-switcher {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.mobile,
.desktop {
  display: none;
}

.hero {
  display: flex;
  justify-content: space-around;
  align-items: center;
  vertical-align: middle;
  height: 75vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  padding: 20px;
}

@keyframes glitch {
  0%,
  10%,
  75%,
  100% {
    color: #e7295c;
    opacity: 1;
    transform: translate(0);
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
  75.1% {
    color: rgb(179, 255, 0); /* Change color */
    transform: translate(10px, 5px); /* Change position */
    clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%); /* Change shape */
  }
  80% {
    color: rgb(216, 98, 14);
    transform: translate(-10px, -5px);
    clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
  }
  85% {
    color: rgb(0, 132, 255);
    transform: translate(5px, 10px);
    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
  }
  90% {
    color: rgb(255, 0, 0);
    transform: translate(-5px, -10px);
    clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 90%);
  }
  95%,
  5% {
    opacity: 0;
  }
}

.vertical-flex {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.greeting {
  font-size: 3em;
  color: #e7295c;
  animation: glitch 2s infinite;
}

.me {
  position: relative;
  width: 70vh;
  height: 70vh;
  overflow: hidden;
}
.me img {
  width: 100%;
  height: auto;
  border-radius: 50px;
}

.desc {
  font-size: medium;
  text-wrap: wrap;
  font-style: italic;
  color: darkgray;
}

/* display only if screen size is small enough */
@media (max-width: 1109px) {
  .mobile {
    display: block;
  }

  .container {
    width: 100%;
    margin: auto;
  }

  .navbar {
    margin: auto;
    width: 90%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    padding-left: 20px;
    padding-right: 20px;
    box-shadow: 0 15px 30px 0 #d0ddf4;
    transition: all 0.4s ease 0s;
    border-radius: 50px;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    margin-bottom: 25px;
  }

  body.dark-mode .navbar {
    box-shadow: 0 15px 30px 0 #6112278f;
  }

  .navbar .section-name {
    padding-right: 20px;
    font-size: 1em;
    vertical-align: middle;
  }

  .nav-container {
    display: block;
    position: relative;
    height: 60px;
    align-items: center;
  }

  .navbar .menu-items {
    display: flex;
  }

  .navbar .nav-container li {
    list-style: none;
  }

  .navbar .nav-container a {
    text-decoration: none;
    color: #000000;
    font-weight: 500;
    font-size: 1.2rem;
  }

  body.dark-mode .navbar .nav-container a {
    color: #ffffff;
  }

  a .navbar .nav-container a:hover {
    text-shadow: 0px 0px 20px #000000;
  }

  .nav-container .checkbox {
    position: absolute;
    display: block;
    height: 32px;
    width: 32px;
    top: 20px;
    left: 20px;
    z-index: 5;
    opacity: 0;
    cursor: pointer;
  }

  .nav-container .hamburger-lines {
    display: block;
    height: 26px;
    width: 32px;
    position: absolute;
    top: 17px;
    left: 20px;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .nav-container .hamburger-lines .line {
    display: block;
    height: 4px;
    width: 100%;
    border-radius: 50px;
    background: #000000;
  }

  body.dark-mode .nav-container .hamburger-lines .line {
    display: block;
    height: 4px;
    width: 100%;
    border-radius: 50px;
    background: #ffffff;
  }

  .nav-container .hamburger-lines .line1 {
    transform-origin: 0% 0%;
    transition: transform 0.25s ease-in-out;
  }

  .nav-container .hamburger-lines .line2 {
    transition: transform 0.05s ease-in-out;
  }

  .nav-container .hamburger-lines .line3 {
    transform-origin: 0% 100%;
    transition: transform 0.25s ease-in-out;
  }

  .navbar .menu-items {
    padding-top: 120px;
    backdrop-filter: blur(20px);

    height: 100vh;
    transform: translate(-200%);
    display: flex;
    flex-direction: column;
    margin-left: -40px;
    padding-left: 50px;
    transition: transform 0.25s ease-in-out;
    text-align: center;
  }

  .navbar .menu-items li {
    margin-right: auto;
    margin-bottom: 1.2rem;
    font-size: 1.5rem;
    font-weight: 500;
  }

  .nav-container input[type="checkbox"]:checked ~ .menu-items {
    transform: translateX(0);
    width: 90vw;
  }

  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
    transform: rotate(45deg);
  }

  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
    transform: scaleY(0);
  }

  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
    transform: rotate(-45deg);
  }

  .nav-container input[type="checkbox"]:checked ~ .section-name {
    display: none;
  }
}

body {
  padding: 10px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  transition: background-color 0.4s ease;
}

body.light-mode {
  background-color: #f5f5f5;
  color: black;
}

body.dark-mode {
  background-color: #000000;
  color: white;
}

/* Hide default HTML checkbox */
.theme-switcher input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #e1e8f4;
  /* box-shadow: inset 3px 3px 6px rgb(59, 11, 235); */
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 28px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background: url("./icons/sun.gif");
  background-size: cover;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #1b242b;
}

input:hover + .slider {
  box-shadow: 0 0 2px #000000;
  transition: all 0.4s ease 0s;
}

body.dark-mode input:hover + .slider {
  box-shadow: 0 0 5px #ffffff;
}

input:checked + .slider:before {
  background: url("./icons/moon.gif");
  background-size: cover;
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

/* Styles for tablets */
/* @media (min-width: 600px) {
} */

/* Styles for desktop */
@media (min-width: 1110px) {
  .desktop {
    display: block;
  }

  header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 20px 50px;
    box-shadow: 0 15px 30px 0 #d0ddf4;
    transition: all 0.4s ease 0s;
    border-radius: 50px;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    margin-bottom: 50px;
  }

  body.dark-mode header {
    box-shadow: 0 15px 30px 0 #6112278f;
  }

  #name {
    margin-right: auto;
    font-size: 1.5em;
    vertical-align: middle;
  }

  header li {
    list-style: none;
    display: inline-block;
    padding: 0 20px;
    vertical-align: middle;
  }

  header a {
    text-decoration: none;
    font-size: 0.8em;
    color: #4d4d4d;
    transition: all 0.2s ease 0s;
  }

  body.dark-mode header a {
    color: #bdbdbd;
  }

  header a.active {
    font-size: 1em;
    background-color: #000000;
    border-radius: 50px;
    padding: 10px;
    color: #ffffff;
    transition: all 0.4s ease 0s;
  }

  header a:hover:not(.active) {
    font-size: 0.9em;
    color: #000000;
  }

  body.dark-mode header a:hover:not(.active) {
    font-size: 0.9em;
    color: #ffffff;
  }

  body.dark-mode header a.active {
    font-size: 1em;
    background-color: #e1e8f4;
    border-radius: 50px;
    padding: 10px;
    color: #0a1529;
  }
}

